Update privacy policy and terms sections
Removed comments for privacy and terms sections, updated intellectual property clause.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       </div>
 
       <div class="p-8">
-        <!-- PRIVACY -->
         <div id="content-privacy" class="tab-content">
           <h1 class="text-2xl font-extrabold mb-2">Privacy Policy</h1>
           <p class="text-sm text-gray-500 mb-6">Effective Date: October 26, 2025</p>
@@ -75,7 +74,6 @@
           </p>
         </div>
 
-        <!-- TERMS -->
         <div id="content-terms" class="tab-content hidden">
           <h1 class="text-2xl font-extrabold mb-2">Terms & Conditions</h1>
           <p class="text-sm text-gray-500 mb-6">Effective Date: October 26, 2025</p>
@@ -99,14 +97,17 @@
           <p class="text-gray-700 mt-2 leading-relaxed">
             The app is provided "as is." We are not liable for inaccuracies returned by AI, nor for consequences arising from your use of the parsed data.
           </p>
-
-          <h2 class="text-lg font-bold mt-4">5. Changes</h2>
+          
+          <h2 class="text-lg font-bold mt-4">5. Intellectual Property (Maalikana Haq)</h2>
+          <p class="text-gray-700 mt-2 leading-relaxed">
+            The Tej Resume App, its original content, features, functionality, source code, design, and logo are and will remain the exclusive property of the app creator and are protected by copyright and other laws. However, any resume content, work history, skills, or personal data that you enter or upload into the application **remains your property (the user's property)**. We claim no ownership over the raw data you provide, but we are granted a limited license to use that data solely for the purpose of generating your resume within the app.
+          </p>
+          <h2 class="text-lg font-bold mt-4">6. Changes</h2>
           <p class="text-gray-700 mt-2 leading-relaxed">
             We may update these Terms & Policy. We will publish the effective date; please review periodically.
           </p>
         </div>
 
-        <!-- CONTACT -->
         <div id="content-contact" class="tab-content hidden">
           <h1 class="text-2xl font-extrabold mb-2">Contact Us</h1>
           <p class="text-gray-700 mt-2 leading-relaxed mb-4">If you have questions about this policy, privacy, or data handling, contact us at:</p>
