Add strong tag to intellectual property statement

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
           
           <h2 class="text-lg font-bold mt-4">5. Intellectual Property</h2>
           <p class="text-gray-700 mt-2 leading-relaxed">
-            The Tej Resume App, its original content, features, functionality, source code, design, and logo are and will remain the exclusive property of the app creator and are protected by copyright and other laws. However, any resume content, work history, skills, or personal data that you enter or upload into the application **remains your property (the user's property)**. We claim no ownership over the raw data you provide, but we are granted a limited license to use that data solely for the purpose of generating your resume within the app.
+            The Tej Resume App, its original content, features, functionality, source code, design, and logo are and will remain the exclusive property of the app creator and are protected by copyright and other laws. However, any resume content, work history, skills, or personal data that you enter or upload into the application <strong>remains your property (the user's property)</strong>. We claim no ownership over the raw data you provide, but we are granted a limited license to use that data solely for the purpose of generating your resume within the app.
           </p>
+
           <h2 class="text-lg font-bold mt-4">6. Changes</h2>
           <p class="text-gray-700 mt-2 leading-relaxed">
             We may update these Terms & Policy. We will publish the effective date; please review periodically.
