--- a/index.html
+++ b/index.html
@@ -4,24 +4,74 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Privacy Policy & Terms - Tej Resume App</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; background:#f1f5f9; }
-    /* TAB ACTIVE FIX: यह सुनिश्चित करता है कि सक्रिय टैब साफ दिखे */
+        /* BASE STYLES */
+    body { font-family: 'Inter', sans-serif; background:#f1f5f9; min-height: 100vh; }
+        .container {
+            max-width: 1024px;
+            margin: 0 auto;
+            padding: 1.5rem; /* p-6 */
+        }
+        .bg-white { background-color: #ffffff; }
+        .rounded-2xl { border-radius: 1rem; }
+        .shadow-lg { box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
+        .overflow-hidden { overflow: hidden; }
+        .border-b { border-bottom: 1px solid #e5e7eb; } /* border-b */
+        .flex { display: flex; }
+        .flex-1 { flex: 1 1 0%; }
+        .p-4 { padding: 1rem; }
+        .text-left { text-align: left; }
+        .font-semibold { font-weight: 600; }
+        .p-8 { padding: 2rem; }
+        .text-2xl { font-size: 1.5rem; line-height: 2rem; }
+        .font-extrabold { font-weight: 800; }
+        .mb-2 { margin-bottom: 0.5rem; }
+        .text-sm { font-size: 0.875rem; line-height: 1.25rem; }
+        .text-gray-500 { color: #6b7280; }
+        .mb-6 { margin-bottom: 1.5rem; }
+        .mt-2 { margin-top: 0.5rem; }
+        .ml-6 { margin-left: 1.5rem; }
+        .list-disc { list-style-type: disc; }
+        .text-lg { font-size: 1.125rem; line-height: 1.75rem; }
+        .font-bold { font-weight: 700; }
+        .mt-4 { margin-top: 1rem; }
+        .text-gray-700 { color: #374151; }
+        .leading-relaxed { line-height: 1.625; }
+        .text-blue-600 { color: #2563eb; }
+        .font-medium { font-weight: 500; }
+        .mb-4 { margin-bottom: 1rem; }
+        .mt-6 { margin-top: 1.5rem; }
+        .space-y-4 > * + * { margin-top: 1rem; }
+        .w-full { width: 100%; }
+        .p-3 { padding: 0.75rem; }
+        .border { border: 1px solid #d1d5db; }
+        .rounded { border-radius: 0.25rem; }
+        .px-6 { padding-left: 1.5rem; padding-right: 1.5rem; }
+        .py-3 { padding-top: 0.75rem; padding-bottom: 0.75rem; }
+        .bg-blue-600 { background-color: #2563eb; }
+        .text-white { color: #ffffff; }
+
+        /* TAB SPECIFIC STYLES */
+    .tab-button {
+      border-bottom: 3px solid transparent;
+      transition: all 0.2s ease-in-out;
+    }
     .tab-button.active { 
       border-bottom:3px solid #3b82f6; 
       color:#3b82f6; 
       background:#eef2ff; 
-      font-weight: 700; /* Bold */
     }
+    .tab-content.hidden { display: none; }
+
+        /* NOTICE STYLES */
     .notice { background: linear-gradient(90deg,#fef3c7,#fff7ed); border-left:4px solid #f59e0b; padding:12px; border-radius:8px; }
-    /* सुनिश्चित करें कि कंटेनर PC पर सेंटर में रहे और ज़्यादा बड़ा न हो */
-    .container {
-      max-width: 1024px; /* उदाहरण के लिए, 1024px पर सीमित */
-      margin-left: auto;
-      margin-right: auto;
-    }
+
+        /* RESPONSIVE IMPROVEMENT */
+        @media (max-width: 640px) {
+            .flex { flex-direction: column; }
+            .tab-button { border-bottom: none; border-top: 1px solid #e5e7eb; }
+        }
   </style>
 </head>
 <body class="min-h-screen">
@@ -151,7 +201,6 @@
 
   <script>
     function showTab(name) {
-      // टैब बदलने पर active क्लास को सही तरीके से हटाता और जोड़ता है
       document.querySelectorAll('.tab-content').forEach(e => e.classList.add('hidden'));
       document.querySelectorAll('.tab-button').forEach(b => b.classList.remove('active'));
       document.getElementById('content-' + name).classList.remove('hidden');
