--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         /* Tab Button Styling (Updated for Slimmer Mobile View) */
         .tab-button { 
             position: relative;
-            padding: 1rem 0.5rem; /* Padding कम की गई (पिछले 1.25rem से 1rem) */
+            padding: 1rem 0.5rem; 
             text-align: center;
             border-bottom: 2px solid transparent;
             color: #64748b;
             transition: all 0.2s ease;
-            font-size: 0.8rem; /* टेक्स्ट साइज़ और छोटा किया गया (sm: text-base) */
+            font-size: 0.8rem; 
         }
 
         /* Active Tab Styling */
@@ -120,7 +120,12 @@
                         Keeping data local reduces exposure risk. We follow common security practices for any communication with third-party services, but remember: the safest option is not to upload documents containing extremely sensitive personal identifiers.
                     </p>
 
-                    <h2 class="text-xl font-bold mt-8 text-gray-800" id="data-deletion">7. Data Deletion Request</h2>
+                    <h2 class="text-xl font-bold mt-8 text-gray-800">7. Log Data and Analytics</h2>
+                    <p class="text-gray-700 mt-2 leading-relaxed">
+                        We collect data that your device automatically sends whenever you use the App ("Log Data"). This includes diagnostic information such as your device's IP address, device model, operating system version, app usage statistics, and crash logs. We collect this data primarily to maintain and improve our service, debug technical issues, and ensure the proper functioning of integrated third-party services like Google AdMob. This data is generally non-personal and is handled by trusted third-party providers (e.g., Google Firebase/Analytics).
+                    </p>
+
+                    <h2 class="text-xl font-bold mt-8 text-gray-800" id="data-deletion">8. Data Deletion Request</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
                         As your data is stored locally on your device, deleting it is very simple.
                     </p>
@@ -129,6 +134,11 @@
                         <li>**Third-Party Data:** Any data temporarily sent to the AI parsing service is processed **ephemerally** (not permanently stored) and is deleted immediately after use.</li>
                         <li>**Formal Request:** For any formal data deletion confirmation or query, you can contact us via the <a href="#" onclick="showTab('contact'); return false;" class="text-blue-600 font-medium hover:underline">Contact Us</a> tab.</li>
                     </ul>
+
+                    <h2 class="text-xl font-bold mt-8 text-gray-800">9. Children’s Privacy</h2>
+                    <p class="text-gray-700 mt-2 leading-relaxed">
+                        The App is a professional resume building tool and is **not intended for use by anyone under 13 years of age.** We do not knowingly collect personally identifiable information (PII) from children under 13. If you are a parent or guardian and believe your child has provided us with personal data, please contact us immediately.
+                    </p>
                 </div>
 
                 <div id="content-terms" class="tab-content hidden">
@@ -137,12 +147,12 @@
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">1. Acceptance</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        By using Tej Resume App you accept these terms. If you do not agree, please do not use the app.
+                        By using Tej Resume App you accept these terms. If you disagree with these Terms, **you may still use the app for manual data entry (form filling) only.** However, you **must not** use the file upload or AI-assisted features unless you accept the specific consent request for data processing (Section 2).
                     </p>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">2. Service description</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        The app helps you create, edit, and manage resumes. You may upload files for AI-assisted parsing only if you explicitly agree. Email and phone numbers are never transmitted to third parties.
+                        The App helps you create, edit, and manage resumes. Data entered manually via forms is **never transmitted to external AI services**. If you upload a file for AI parsing, data is shared **only after you provide explicit consent**. Email and phone numbers are handled as specified in the Privacy Policy.
                     </p>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">3. User responsibility</h2>
@@ -171,15 +181,15 @@
                     <p class="text-gray-700 mt-2 leading-relaxed mb-6">If you have questions about this policy, privacy, or data handling, contact us directly via email:</p>
                     
                     <div class="p-4 sm:p-6 bg-blue-50 rounded-lg border border-blue-100 mb-8 text-center">
-                         <p class="text-sm font-semibold text-blue-600 mb-2">Primary Contact Email:</p>
+                           <p class="text-sm font-semibold text-blue-600 mb-2">Primary Contact Email:</p>
                         <p class="font-bold text-gray-800 text-xl sm:text-2xl break-all">
                             tejresume.help@gmail.com
                         </p>
                     </div>
 
                     <a href="mailto:tejresume.help@gmail.com?subject=Query%20from%20Tej%20Resume%20App%20Website" 
-                       class="inline-block w-full px-8 py-3 bg-blue-600 text-white rounded-lg font-semibold shadow-md hover:bg-blue-700 transition duration-150 transform hover:scale-[1.01] text-center">
-                       Send Us an Email
+                        class="inline-block w-full px-8 py-3 bg-blue-600 text-white rounded-lg font-semibold shadow-md hover:bg-blue-700 transition duration-150 transform hover:scale-[1.01] text-center">
+                        Send Us an Email
                     </a>
                     
                     <p class="text-sm text-gray-500 mt-6 text-center">Clicking this button will open your device's default email application.</p>
