Enhance HTML content with strong tags for emphasis

--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                     <div class="notice mb-8">
                         <strong class="text-gray-800 block text-lg mb-1">Quick Summary:</strong>
                         <ul class="mt-2 list-disc ml-5 text-sm sm:text-base text-gray-700 leading-relaxed space-y-2">
-                            <li>Email and phone number from uploaded files are **never** sent to AI or any server — they are removed locally first.</li>
-                            <li>Other resume content (education, experience, skills, and any other fields present in the file) **may be** sent to a third‑party AI service for processing — only with your explicit consent.</li>
+                            <li>Email and phone number from uploaded files are <strong>never</strong> sent to AI or any server — they are removed locally first.</li>
+                            <li>Other resume content (education, experience, skills, and any other fields present in the file) <strong>may be</strong> sent to a third‑party AI service for processing — only with your explicit consent.</li>
                             <li>If your file contains other sensitive identifiers (national ID, passport, bank details, full address, etc.), remove or mask them before uploading if you do not want them processed.</li>
                         </ul>
                     </div>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">1. What we store</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        All core resume data you enter in the app (work history, education, skills, projects, summary) is stored **locally on your device only**. We do not collect or store your email address or phone number on our servers.
+                        All core resume data you enter in the app (work history, education, skills, projects, summary) is stored <strong>locally on your device only</strong>. We do not collect or store your email address or phone number on our servers.
                     </p>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">2. What happens when you upload a file</h2>
@@ -95,9 +95,9 @@
                         When you upload a PDF, TXT, or DOCX file and choose to use AI-assisted parsing, the app:
                     </p>
                     <ul class="list-disc ml-6 mt-3 text-gray-700 leading-relaxed space-y-2">
-                        <li>First extracts any email addresses and phone numbers and **removes/masks them locally**.</li>
-                        <li>Then, the app may send the remaining content (education, job titles, descriptions, skills, dates, and any other text present) to a third‑party AI/ML service to convert it into structured resume fields — **only if you agreed** to this in the consent dialog.</li>
-                        <li>Any other sensitive identifiers (for example: national ID, passport number, bank details, full home address) that exist in your file **may also be sent** if they were not explicitly recognized and removed by the app. For safety, please remove or mask such sensitive items before uploading.</li>
+                        <li>First extracts any email addresses and phone numbers and <strong>removes/masks them locally</strong>.</li>
+                        <li>Then, the app may send the remaining content (education, job titles, descriptions, skills, dates, and any other text present) to a third‑party AI/ML service to convert it into structured resume fields — <strong>only if you agreed</strong> to this in the consent dialog.</li>
+                        <li>Any other sensitive identifiers (for example: national ID, passport number, bank details, full home address) that exist in your file <strong>may also be sent</strong> if they were not explicitly recognized and removed by the app. For safety, please remove or mask such sensitive items before uploading.</li>
                     </ul>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">3. Why we remove email & phone</h2>
@@ -130,14 +130,14 @@
                         As your data is stored locally on your device, deleting it is very simple.
                     </p>
                     <ul class="list-disc ml-6 mt-3 text-gray-700 leading-relaxed space-y-2">
-                        <li>**Local Data:** To delete your resume data stored on your phone, simply open the app and use the **'Delete Profile'** button, or **uninstall the application**.</li>
-                        <li>**Third-Party Data:** Any data temporarily sent to the AI parsing service is processed **ephemerally** (not permanently stored) and is deleted immediately after use.</li>
-                        <li>**Formal Request:** For any formal data deletion confirmation or query, you can contact us via the <a href="#" onclick="showTab('contact'); return false;" class="text-blue-600 font-medium hover:underline">Contact Us</a> tab.</li>
+                        <li><strong>Local Data:</strong> To delete your resume data stored on your phone, simply open the app and use the **'Delete Profile'** button, or **uninstall the application**.</li>
+                        <li><strong>Third-Party Data:</strong> Any data temporarily sent to the AI parsing service is processed **ephemerally** (not permanently stored) and is deleted immediately after use.</li>
+                        <li><strong>Formal Request:</strong> For any formal data deletion confirmation or query, you can contact us via the <a href="#" onclick="showTab('contact'); return false;" class="text-blue-600 font-medium hover:underline">Contact Us</a> tab.</li>
                     </ul>
-
+                    
                     <h2 class="text-xl font-bold mt-8 text-gray-800">9. Children’s Privacy</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        The App is a professional resume building tool and is **not intended for use by anyone under 13 years of age.** We do not knowingly collect personally identifiable information (PII) from children under 13. If you are a parent or guardian and believe your child has provided us with personal data, please contact us immediately.
+                        The App is a professional resume building tool and is <strong>not intended for use by anyone under 13 years of age.</strong> We do not knowingly collect personally identifiable information (PII) from children under 13. If you are a parent or guardian and believe your child has provided us with personal data, please contact us immediately.
                     </p>
                 </div>
 
@@ -147,12 +147,12 @@
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">1. Acceptance</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        By using Tej Resume App you accept these terms. If you disagree with these Terms, **you may still use the app for manual data entry (form filling) only.** However, you **must not** use the file upload or AI-assisted features unless you accept the specific consent request for data processing (Section 2).
+                        By using Tej Resume App you accept these terms. If you disagree with these Terms, <strong>you may still use the app for manual data entry (form filling) only.</strong> However, you <strong>must not</strong> use the file upload or AI-assisted features unless you accept the specific consent request for data processing (Section 2).
                     </p>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">2. Service description</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        The App helps you create, edit, and manage resumes. Data entered manually via forms is **never transmitted to external AI services**. If you upload a file for AI parsing, data is shared **only after you provide explicit consent**. Email and phone numbers are handled as specified in the Privacy Policy.
+                        The App helps you create, edit, and manage resumes. Data entered manually via forms is <strong>never transmitted to external AI services</strong>. If you upload a file for AI parsing, data is shared <strong>only after you provide explicit consent</strong>. Email and phone numbers are handled as specified in the Privacy Policy.
                     </p>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">3. User responsibility</h2>
@@ -167,7 +167,7 @@
                     
                     <h2 class="text-xl font-bold mt-8 text-gray-800">5. Intellectual Property</h2>
                     <p class="text-gray-700 mt-2 leading-relaxed">
-                        The Tej Resume App, its original content, features, functionality, source code, design, and logo are and will remain the exclusive property of the app creator and are protected by copyright and other laws. However, any resume content, work history, skills, or personal data that you enter or upload into the application **remains your property (the user's property)**. We claim no ownership over the raw data you provide, but we are granted a limited license to use that data solely for the purpose of generating your resume within the app.
+                        The Tej Resume App, its original content, features, functionality, source code, design, and logo are and will remain the exclusive property of the app creator and are protected by copyright and other laws. However, any resume content, work history, skills, or personal data that you enter or upload into the application <strong>remains your property (the user's property)</strong>. We claim no ownership over the raw data you provide, but we are granted a limited license to use that data solely for the purpose of generating your resume within the app.
                     </p>
 
                     <h2 class="text-xl font-bold mt-8 text-gray-800">6. Changes</h2>
